# fixed-transcendentals

./: Cargo.toml  LICENSE  README.md
src/: arith.rs  decimal.rs  decimal2.rs  decimal3.rs  decimal4.rs  fix128.rs  fix64.rs  helpers.rs  inner.rs  int256_test0.rs  int256_test0a.rs  int256_test1.rs  int256_test2.rs  int256_test3.rs  int256_test4.rs  int256_test5.rs  int256_test6.rs  int256_test7.rs  int256_test8.rs  lib.rs  main.rs  multiplier.rs  multiplier2.rs  sqrt.rs  substrate.rs  types.rs  ui256.rs
src/exp/: mod.rs  rational.rs
src/ln/: mod.rs  polynomial.rs
